# gates_of_skeldal_woa

./: .gitignore  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md  malloc.h  skeldal.ini  vcpkg.json
game/: CMakeLists.txt  automap.c  builder.c  chargen.c  chargen2.c  clk_map.c  dialogy.c  dump.cpp  engine1.c  engine1.h  engine2.c  file_to_base64.cmake  gamesave.c  globals.h  globmap.c  interfac.c  inv.c  kouzla.c  menu.c  realgame.c  skeldal.c  sndandmus.c  souboje.c  specproc.c
libs/: base64.h  basicobj.c  basicobj.h  bgraph.c  bgraph.h  bgraph2.c  bgraph2a.c  engine1.c  event.c  gui.c  gui.h  mgifmapmem.c  mgifplaya.c  pcx.c  pcx.h  strlists.c  unaligned.h
platform/: CMakeLists.txt  legacy_coroutines.cpp  platform.h
platform/mac_os/: map_file.cpp  save_folder.cpp
platform/sdl/: BGraph2.cpp  BGraph2.h  CMakeLists.txt  pixel_scaler.cpp  pixel_scaler.h  post_process.cpp  post_process.h  sdl_context.cpp  sdl_context.h  touch_input.cpp  touch_input.h  touch_overlay.cpp  touch_overlay.h
